objects/Auto_Process_Flags__mdt.object
<CustomObject>
    <description>This object is used to track flags related to automated processes.</description>
    <fields>
        <fullName>Process_Name__c</fullName>
        <description>The name of the process this data relates to.</description>
        <inlineHelpText>The name of the process this data relates to.</inlineHelpText>
        <label>Process Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Name__c</fullName>
        <description>The property or flag we are configuring.</description>
        <inlineHelpText>The property or flag we are configuring.</inlineHelpText>
        <label>Property Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Value__c</fullName>
        <description>The value of the property we are configuring.</description>
        <inlineHelpText>The value of the property we are configuring.</inlineHelpText>
        <label>Property Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Auto-Process Flags</label>
    <pluralLabel>Auto-Process Flags</pluralLabel>
</CustomObject>